# wanaroom

./: .gitignore  README.md
backend-fastapi/: pyproject.toml
backend-fastapi/src/: .env.dev.example  .env.prod.example  .env.secrets.example  config.py  database.py  main.py  middleware.py  models.py  schemas.py
backend-fastapi/src/auth/: __init__.py  dependencies.py  schemas.py  security.py
src/components/: Console.tsx
