[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "fastapi-jwt-auth2",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[tool.uv.sources]
fastapi-jwt-auth2 = { git = "https://github.com/alejorodriguez96/fastapi-jwt-auth.git" }
